GUI-1750: Avoid unexpected line breaks at autoscaling tag editor's propagate checkbox/label

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -509,6 +509,9 @@ textarea.policy-area {
     #add-tag-btn {
         margin-bottom: 0;
     }
+    #propagate-wrapper {
+        white-space: nowrap;
+    }
 }
 
 /* -----------------------------------------
